# checkers

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  package-lock.json  package.json
data/: rooms.json
public/styles/: custom.css
src/: main.rs  store.rs  utility.rs
src/engine/: board.rs  cell.rs  checker.rs  mod.rs  route.rs  turn.rs
src/routes/: games.rs  mod.rs  room.rs  rooms.rs  ws.rs
src/templates/: board_template.rs  cell_template.rs  cells_template.rs  mod.rs  room_template.rs
templates/components/: board.html  cell.html  room_href.html
templates/layouts/: base.html
templates/pages/: index.html  room.html
