[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
axum = { version = "0.7.4", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
askama_axum = "0.4.0"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[build]
rustflags = ["-Z", "threads=8"]
